[gd_scene load_steps=7 format=3 uid="uid://btolegbl3qaau"]

[ext_resource type="Script" path="res://Scenes and Scripts/UI/Equations/EquationControl.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://wb1i4bumdesj" path="res://Scenes and Scripts/UI/Equations/StateContainer.tscn" id="2"]
[ext_resource type="Theme" uid="uid://dil4mrtu23acn" path="res://Resources/Themes/Info.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://crbbg4xos3tyn" path="res://Textures/UI/Equation/e_arrow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bko6wbkdn8fyv" path="res://Textures/UI/Information/box_soft.png" id="5"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("5")
region_rect = Rect2(0, 0, 16, 16)

[node name="Equation" type="PanelContainer" groups=["no_place"]]
offset_right = 320.0
offset_bottom = 28.0
theme = ExtResource("3")
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EquationContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")

[node name="InitialScrollContainer" parent="VBoxContainer/EquationContainer" groups=["scrollcontainer"] instance=ExtResource("2")]
layout_mode = 2

[node name="StateContainer" parent="VBoxContainer/EquationContainer/InitialScrollContainer/HBoxContainer" index="0"]
size_flags_vertical = 1

[node name="Arrow" type="TextureRect" parent="VBoxContainer/EquationContainer"]
custom_minimum_size = Vector2(30, 22)
layout_mode = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="FinalScrollContainer" parent="VBoxContainer/EquationContainer" groups=["scrollcontainer"] instance=ExtResource("2")]
layout_mode = 2

[node name="HBoxContainer" parent="VBoxContainer/EquationContainer/FinalScrollContainer" index="0"]
alignment = 0

[connection signal="mouse_entered" from="." to="." method="_on_Equation_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Equation_mouse_exited"]

[editable path="VBoxContainer/EquationContainer/InitialScrollContainer"]
[editable path="VBoxContainer/EquationContainer/FinalScrollContainer"]
